--- a/docker/dockerfile for keras/Dockerfile
+++ b/docker/dockerfile for keras/Dockerfile
@@ -2,12 +2,13 @@ FROM centos:latest
 
 RUN dnf install wget -y
 RUN yum install python36 -y
-
-
 RUN pip3 install --upgrade pip
+
 RUN pip3 install numpy
 RUN pip3 install pandas
-RUN pip3 install scikit-learn
+RUN pip3 install tensorflow
+RUN pip3 install Keras
+
 
 
 
